1st cmmt